# MultiPL-E

./: automodel.py
evaluation/src/safe_subprocess/: __init__.py
llm-eval/: pyproject.toml
llm-eval/llm_eval/: eval.py
llm-eval/llm_eval/data/complexCodeEval/: generate_prompts.py
