[tool.poetry]
name = "llm-eval"
version = "0.1.0"
description = "LLM evaluation framework"
authors = ["SonarSource"]

[tool.poetry.dependencies]
python = ">=3.12"
aiohttp = ">=3.11.13,<4.0.0"
numpy = ">=2.2.3,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
pytest = ">=8.3.5,<9.0.0"
datasets = ">=3.3.2,<4.0.0"
torch = ">=2.6.0,<3.0.0"
transformers = ">=4.49.0,<5.0.0"
sentencepiece = ">=0.1.99"
accelerate = "^1.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-eval = "llm_eval.eval:main"